2007-09-14  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/keypress_mimic.py: Added WaitForDocLoad. Made
	key_code arguments optional in key press and release
	classes. Useful for cross platform.
	* macaroon/record/script_factory.py: Prepend contextual waitfors
	when a keypress comes out of the blue. Got rid of silly whitespaces.
	* macaroon/record/main.py: Put Level 2 as default. Toggle focus
	waiting. Attempt to predict consumed WM hotkeys.
	
2007-08-30  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/keypress_mimic.py: Override __call__ to remove 
	stepDone().
	* macaroon/playback/playback_sequence.py: Added stepDone() to the
	end of the AtomicAction __call__ method.
	
2007-08-07  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/playback_sequence.py: Added a DebugAction for 
	printing info to standard output.
	* macaroon/playback/utils.py: Put in some assertions to avoid dead
	accessibles in the desktop.
	* macaroon/record/script_factory.py: Write WaitForFocus in current 
	format.

2007-07-31  Willie Walker  <william.walker@sun.com>

	* macaroon/playback/keypress_mimic.py, 
	macaroon/playback/playback_sequence.py: add event, acc_name,
	acc_path, and acc_role parameters to WaitAction and extend
	its onEventMethod to check these.  Modify WaitForWindowActivate
	and WaitForFocus classes to use the new WaitAction superclass.

2007-07-30  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/keypress_mimic.py: Renamed press_min to min_delta.
	Gave it a default of 50ms.
	
	* macaroon/playback/Makefile.am: Added utils.py.
	* macaroon/playback/keypress_mimic.py: Look for pre-existing
	active window before waiting.
	* macaroon/playback/playback_sequence.py: Small refactor to allow
	wait actions to override current state check.
	* macaroon/playback/utils.py: Function for finding active window.
	* macaroon/record/script_factory.py: Silly exception for
	<Shift>Tab in sequnce level 2 recording.
