@@ -194,6 +194,7 @@ class Level2SequenceFactory(SequenceFactory):
     desktop = pyatspi.Registry.getDesktop(0)
     active_frame = None
     for app in desktop:
+      if not app: continue
       for acc in app:
         if acc is None: continue
         if acc.getRole() == pyatspi.ROLE_FRAME:
